--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -68,15 +68,21 @@ jobs:
             # Create a test file
             "PowerShell execution test - $(Get-Date)" | Out-File "C:/Temp/powershell_test.txt"
 
-            # Open PowerShell as admin and run commands
-            Start-Process powershell -Verb RunAs -Wait -ArgumentList "-NoExit, -Command {
-                Set-Location ''C:/Temp/EdFi.Suite3.RestApi.Databases.Standard'';
-                Write-Host ''Importing module...'';
-                Import-Module ./Deployment.psm1;
-                Write-Host ''Starting deployment...'';
-                Initialize-DeploymentEnvironment;
-                Write-Host ''Deployment completed'';
-                
-                # Create another test file from the new PowerShell session
-                ''New PowerShell session test - $(Get-Date)'' | Out-File ''C:/Temp/powershell_test_2.txt'';
-            }"'
+            # Run commands directly
+            Write-Host "Changing to database directory..."
+            Set-Location "C:/Temp/EdFi.Suite3.RestApi.Databases.Standard"
+            
+            Write-Host "Importing module..."
+            Import-Module ./Deployment.psm1
+            
+            Write-Host "Starting deployment..."
+            Initialize-DeploymentEnvironment
+            
+            Write-Host "Checking for databases..."
+            $query = "SELECT name FROM sys.databases WHERE name LIKE ''EdFi%''"
+            $databases = Invoke-Sqlcmd -Query $query -ServerInstance "(local)"
+            Write-Host "Found databases:"
+            $databases | ForEach-Object { Write-Host $_.name }
+            
+            Write-Host "Deployment completed"
+            "Deployment completed - $(Get-Date)" | Out-File "C:/Temp/deployment_complete.txt"'
