--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -63,15 +63,4 @@ jobs:
             # Download and extract SandboxAdmin
             Invoke-WebRequest -Uri "https://pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_apis/packaging/feeds/EdFi@Release/nuget/packages/EdFi.Suite3.Installer.SandboxAdmin/versions/7.2.7/content" -OutFile "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin.nupkg"
             Rename-Item -Path "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin.nupkg" -NewName "EdFi.Suite3.Installer.SandboxAdmin.zip"
-            Expand-Archive -Path "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin.zip" -DestinationPath "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin" -Force
-
-            # Create and run PowerShell script for database initialization
-            $scriptContent = @'
-Set-Location "C:/Temp/EdFi.Suite3.RestApi.Databases.Standard"
-Import-Module ./Deployment.psm1
-Initialize-DeploymentEnvironment
-'@
-
-            # Save and run script
-            $scriptContent | Out-File "C:/Temp/deploy-edfi.ps1"
-            Start-Process powershell.exe -ArgumentList "-ExecutionPolicy Bypass -File C:/Temp/deploy-edfi.ps1" -Verb RunAs -Wait'
+            Expand-Archive -Path "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin.zip" -DestinationPath "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin" -Force'
