--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -66,7 +66,7 @@ jobs:
             Expand-Archive -Path "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin.zip" -DestinationPath "C:/Temp/EdFi.Suite3.Installer.SandboxAdmin" -Force
 
             # Change directory to WebApi Installer location and initialize deployment
-            $toolsPath = "C:\Temp\EdFi.Suite3.Installer.WebApi\tools"
+            $toolsPath = "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
             $dbPath = "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
             
             Write-Host "Verifying paths..."
