--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -40,28 +40,39 @@ jobs:
             --name "${{ github.event.inputs.vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --scripts '
+            $ErrorActionPreference = "Continue"
+            
             cd "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
             
-            Write-Host "Starting deployment in background job..."
-            $job = Start-Job -ScriptBlock {
-                Set-Location "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
-                Import-Module .\Deployment.psm1
-                Initialize-DeploymentEnvironment -ErrorAction Stop
+            Write-Host "Current location: $(Get-Location)"
+            Write-Host "Checking EdFi.Db.Deploy tool..."
+            if (Test-Path ".\tools\EdFi.Db.Deploy.exe") {
+                Write-Host "EdFi.Db.Deploy.exe exists"
+                $toolVersion = (Get-Item ".\tools\EdFi.Db.Deploy.exe").VersionInfo.FileVersion
+                Write-Host "Tool version: $toolVersion"
+            } else {
+                Write-Error "EdFi.Db.Deploy.exe not found!"
+                exit 1
             }
             
-            Write-Host "Waiting for deployment to complete..."
-            while ($job.State -eq "Running") {
-                Write-Host "Job still running... $(Get-Date)"
-                Start-Sleep -Seconds 30
-                $job | Receive-Job
-            }
+            Write-Host "Importing module..."
+            Import-Module .\Deployment.psm1 -Verbose
             
-            $result = $job | Receive-Job -Keep
-            if ($job.State -eq "Failed") {
-                Write-Error "Deployment failed"
-                Write-Error $result
-                throw "Deployment failed"
-            }
+            Write-Host "Getting available commands..."
+            Get-Command -Module Deployment | Format-Table -AutoSize
             
-            Write-Host "Deployment completed successfully"
-            Write-Host $result' 
+            Write-Host "Starting deployment..."
+            try {
+                Initialize-DeploymentEnvironment -Verbose
+                Write-Host "Deployment completed successfully"
+            }
+            catch {
+                Write-Error "Deployment failed with error: $_"
+                Write-Error "Stack trace: $($_.ScriptStackTrace)"
+                Write-Host "Checking SQL Server status..."
+                $sqlService = Get-Service -Name MSSQLSERVER -ErrorAction SilentlyContinue
+                if ($sqlService) {
+                    Write-Host "SQL Server status: $($sqlService.Status)"
+                }
+                exit 1
+            }' 
